# TFM-Jorge

./: README.md
DINAMICO/: README.md  scenario-generator_k8s.sh
DOCKER/: README.md
DOCKER/PoT_MIXTO/: Dockerfile  api.py  api.yaml  middle2.pcap  scenario-generator.sh  scenario-generator_nodes.sh
ESTATICO/: README.md  k8s-deployments.yaml  run-script-configmap.yaml
ESTATICO/PoT_PRIVATEER/: Dockerfile  captura-egress-net3.pcap  captura-middle1.pcap  captura-ultima.pcap  captura.pcap  captura2.pcap  egress-net1-tfs.pcap  egress-net3-tfs.pcap  ingress-net2.pcap  ingress-net3-2.pcap  ingress-net3-3.pcap  ingress-net3-4.pcap  middle2-net1.pcap  middle2-net2.pcap  multus-daemonset.yml  net1-Ingress.pcap  net1-egress.pcap  net1-middleNode1.pcap  net2-Ingress.pcap  net2-egress.pcap  net2-middleNode1.pcap  scenario-generator.sh
FINAL/: README.md
FINAL/Cluster OSM/: README.md
FINAL/Cluster TFS/: README.md
FINAL/Cluster TFS/controller/src/tests/p4-fwd-l1/probe/probe-tfs/: Cargo.toml  README.md
FINAL/Cluster TFS/controller/src/tests/p4-fwd-l1/probe/probe-tfs/proto/: analytics_frontend.proto  context.proto  distributed_cybersecurity.proto  dlt_gateway.proto  generate_code_erlang.sh  l3_attackmitigator.proto  monitoring.proto  nbi.proto  qos_profile.proto
FINAL/Cluster TFS/controller/src/tests/p4-fwd-l1/probe/probe-tfs/src/: agent.rs
FINAL/Cluster1/: multus-network.yaml  run-script-configmap.yaml
FINAL/Cluster2/: README.md  multus-networks.yaml  run-script-configmap.yaml
FINAL/Ingress-Egress/: README.md  deploy-tdx.sh  ingress-tfs.yaml
(+4703 files in other folders)
