# Copyright 2022-2024 ETSI SDG TeraFlowSDN (TFS) (https://tfs.etsi.org/)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rust-tfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.26"
prost = "0.11.6"
surge-ping = "0.7.3"
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"

[[bin]]
name = "tfsping"
path = "src/ping.rs"

[[bin]]
name = "tfsagent"
path = "src/agent.rs"

[build-dependencies]
tonic-build = "0.8.3"
